--- a/Bible Trivia/View/Base.lproj/Main.storyboard
+++ b/Bible Trivia/View/Base.lproj/Main.storyboard
@@ -19,18 +19,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hh9-Vj-BSm">
-                                <rect key="frame" x="10" y="32" width="647" height="343"/>
+                                <rect key="frame" x="0.0" y="32" width="667" height="343"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <viewLayoutGuide key="safeArea" id="fF3-Bx-Sb6"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="lQ4-6j-gnN">
                                     <size key="itemSize" width="200" height="100"/>
-                                    <size key="headerReferenceSize" width="0.0" height="5"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="boardCell" id="kAS-kh-W3l" customClass="CollectionViewCell" customModule="Bible_Trivia" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="5" width="200" height="100"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
@@ -56,10 +56,6 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
-                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="collectionViewHeader" id="pII-PY-fee">
-                                    <rect key="frame" x="0.0" y="0.0" width="647" height="5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </collectionReusableView>
                                 <connections>
                                     <outlet property="dataSource" destination="qs5-vJ-mnx" id="cVp-XT-9n4"/>
                                     <outlet property="delegate" destination="qs5-vJ-mnx" id="dBK-qb-6o0"/>
@@ -68,10 +64,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="hh9-Vj-BSm" firstAttribute="top" secondItem="L21-wi-zSc" secondAttribute="top" id="2ev-Qz-fpg"/>
-                            <constraint firstItem="L21-wi-zSc" firstAttribute="bottom" secondItem="hh9-Vj-BSm" secondAttribute="bottom" id="379-wH-qpF"/>
-                            <constraint firstItem="hh9-Vj-BSm" firstAttribute="leading" secondItem="L21-wi-zSc" secondAttribute="leading" constant="10" id="5mK-71-bKd"/>
-                            <constraint firstItem="L21-wi-zSc" firstAttribute="trailing" secondItem="hh9-Vj-BSm" secondAttribute="trailing" constant="10" id="dV3-Rk-7ku"/>
+                            <constraint firstItem="hh9-Vj-BSm" firstAttribute="trailing" secondItem="L21-wi-zSc" secondAttribute="trailing" id="Npc-Bb-lo2"/>
+                            <constraint firstItem="hh9-Vj-BSm" firstAttribute="top" secondItem="L21-wi-zSc" secondAttribute="top" id="ap7-uY-ift"/>
+                            <constraint firstItem="hh9-Vj-BSm" firstAttribute="bottom" secondItem="L21-wi-zSc" secondAttribute="bottom" id="f5E-SG-vkH"/>
+                            <constraint firstItem="hh9-Vj-BSm" firstAttribute="leading" secondItem="L21-wi-zSc" secondAttribute="leading" id="nSx-Qh-3Ud"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="L21-wi-zSc"/>
                     </view>
@@ -101,20 +97,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="NGW-Ei-c6P">
-                                <rect key="frame" x="10" y="42" width="647" height="140"/>
+                                <rect key="frame" x="10" y="42" width="647" height="130"/>
                                 <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="140" id="uTp-w1-zcd"/>
+                                    <constraint firstAttribute="height" constant="130" id="uTp-w1-zcd"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gGD-DA-kQN">
-                                <rect key="frame" x="0.0" y="182" width="667" height="183"/>
+                                <rect key="frame" x="0.0" y="172" width="667" height="198"/>
                                 <subviews>
                                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nzb-ef-4u5">
-                                        <rect key="frame" x="10" y="96.5" width="318.5" height="76.5"/>
+                                        <rect key="frame" x="10" y="104" width="318.5" height="84"/>
                                         <color key="backgroundColor" red="0.45009386540000001" green="0.98132258650000004" blue="0.4743030667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="optionB"/>
@@ -123,7 +119,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G78-2M-1HJ">
-                                        <rect key="frame" x="338.5" y="10" width="318.5" height="76.5"/>
+                                        <rect key="frame" x="338.5" y="10" width="318.5" height="84"/>
                                         <color key="backgroundColor" red="0.45009386540000001" green="0.98132258650000004" blue="0.4743030667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="optionC"/>
@@ -132,7 +128,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WMn-nK-UG0">
-                                        <rect key="frame" x="338.5" y="96.5" width="318.5" height="76.5"/>
+                                        <rect key="frame" x="338.5" y="104" width="318.5" height="84"/>
                                         <color key="backgroundColor" red="0.45009386540000001" green="0.98132258650000004" blue="0.4743030667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="optionD"/>
@@ -141,7 +137,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sf4-i9-mUw" userLabel="OptionA">
-                                        <rect key="frame" x="10" y="10" width="318.5" height="76.5"/>
+                                        <rect key="frame" x="10" y="10" width="318.5" height="84"/>
                                         <color key="backgroundColor" red="0.45009386540000001" green="0.98132258650000004" blue="0.4743030667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="optionA"/>
@@ -150,7 +146,6 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="WMn-nK-UG0" firstAttribute="top" secondItem="G78-2M-1HJ" secondAttribute="bottom" constant="10" id="2cE-RR-vv9"/>
                                     <constraint firstItem="sf4-i9-mUw" firstAttribute="leading" secondItem="gGD-DA-kQN" secondAttribute="leading" constant="10" id="DrA-ht-kCg"/>
@@ -175,7 +170,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="bXX-h0-Shh" firstAttribute="bottom" secondItem="gGD-DA-kQN" secondAttribute="bottom" constant="10" id="A2B-e8-Vq8"/>
+                            <constraint firstItem="bXX-h0-Shh" firstAttribute="bottom" secondItem="gGD-DA-kQN" secondAttribute="bottom" constant="5" id="A2B-e8-Vq8"/>
                             <constraint firstItem="gGD-DA-kQN" firstAttribute="leading" secondItem="bXX-h0-Shh" secondAttribute="leading" id="F4q-PQ-0o0"/>
                             <constraint firstItem="NGW-Ei-c6P" firstAttribute="top" secondItem="bXX-h0-Shh" secondAttribute="top" constant="10" id="Kvt-x3-mEM"/>
                             <constraint firstItem="bXX-h0-Shh" firstAttribute="trailing" secondItem="NGW-Ei-c6P" secondAttribute="trailing" constant="10" id="NZO-uF-KcE"/>
